# rp2040-assignment

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
rp2040/: Cargo.toml
rp2040/src/: main.rs
smallball/: Cargo.toml
smallball/src/: config.rs  lib.rs  math.rs  smallball.rs
src/: main.rs  math.rs  smallball.rs
