[package]
name = "rp2040"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-time = "0.12.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
adafruit-feather-rp2040 = "0.3.0"
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
rp2040-hal = "0.5.0"
rp2040-boot2 = "0.2.0"
mpu6050 = "0.1.5"
shared-bus = "0.2.4"
heapless = "0.7.14"
